--- a/src/styles/general.scss
+++ b/src/styles/general.scss
@@ -1,2 +1,6 @@
 @import "./vars.scss";
 @import "~bootstrap/scss/bootstrap.scss";
+
+$fa-font-path: './webfonts';
+@import '~@fortawesome/fontawesome-free/scss/fontawesome.scss';
+@import '~@fortawesome/fontawesome-free/scss/solid.scss';
