--- a/src/styles/general.scss
+++ b/src/styles/general.scss
@@ -1,6 +1,6 @@
 @import "./vars.scss";
 @import "~bootstrap/scss/bootstrap.scss";
 
-$fa-font-path: './webfonts';
+$fa-font-path: '~/src/webfonts';
 @import '~@fortawesome/fontawesome-free/scss/fontawesome.scss';
 @import '~@fortawesome/fontawesome-free/scss/solid.scss';
